--- a/src/lib/styles/colors/colorMapping/default.css
+++ b/src/lib/styles/colors/colorMapping/default.css
@@ -1,152 +1,164 @@
 @import '../coreColorSystem/default.css';
 
+
+/* Aliases  */
 :root {
-    --background-presentation-table-row-selected: #4200FF0D;
-    --border-presentation-table-selected: #CFBEFFFF;
-    --background-presentation-tab-default-topbar: #00000014;
-    --border-presentation-action-disabled: var(--white-500);
-    --background-system-body-primary: var(--black-900);
-    --content-presentation-action-dark-primary: var(--white-200);
-    --content-presentation-action-hover: var(--white-25);
-    --content-presentation-state-success: var(--green-cyan-700);
-    --content-presentation-state-warning: var(--yellow-700);
-    --content-presentation-state-negative: var(--medium-red-600);
-    --background-presentation-action-secondary: var(--black-alpha-15);
-    --background-presentation-form-header: var(--white-alpha-20);
-    --background-presentation-state-success-primary: var(--green-cyan-700);
-    --background-presentation-state-warning-primary: var(--yellow-600);
-    --background-presentation-state-negative-primary: var(--medium-red-600);
-    --background-presentation-state-information-primary: var(--blue-sparkle-700);
-    --background-presentation-action-hover: var(--black-900);
-    --background-presentation-action-primary: var(--black-700);
-    --border-presentation-state-success: var(--green-cyan-700);
-    --border-presentation-state-warning: var(--yellow-700);
-    --border-presentation-state-negative: var(--medium-red-600);
-    --content-presentation-global-highlight-darkback: var(--white-alpha-30);
-    --background-system-body-secondary: var(--black-800);
-    --border-system-global-primary: var(--black-600);
-    --content-system-global-primary: var(--white-200);
-    --content-system-global-secondary: var(--white-700);
-    --background-system-body-base: var(--black-1000);
-    --content-presentation-global-primary: var(--black-1000);
-    --background-presentation-body-primary: var(--white-100);
-    --border-presentation-global-primary: var(--white-300);
-    --background-system-state-negative: var(--medium-red-600);
-    --border-system-action-hover-primary: var(--purple-600);
-    --background-system-action-hover-primary: var(--purple-1000);
-    --content-system-action-hover-primary: var(--white-25);
-    --background-system-action-selected-primary: var(--black-700);
-    --background-system-action-selected-secondray: var(--black-500);
-    --background-system-action-hover-tertiary: var(--white-alpha-20);
-    --content-system-action-hover-secondary: var(--purple-500);
-    --border-system-action-hover-secondary: var(--purple-600);
-    --border-system-global-sidebar-list-border: var(--white-500);
-    --border-presentation-state-focus: var(--blue-sparkle-600);
-    --content-presentation-action-light-primary: var(--black-1000);
-    --background-presentation-action-selected: var(--black-alpha-5);
-    --content-presentation-state-disabled: var(--black-alpha-30);
-    --background-presentation-action-borderstyle: var(--black-alpha-5);
-    --content-presentation-global-secondary: var(--black-200);
-    --content-presentation-action-light-secondary: var(--black-100);
-    --content-presentation-action-dark-secondary: var(--white-500);
-    --content-system-global-disabled: var(--black-100);
-    --content-presentation-state-information: var(--blue-sparkle-800);
-    --border-presentation-action-hover: var(--black-1000);
-    --border-presentation-action-primary: var(--black-100);
-    --content-presentation-action-hover-information: var(--blue-sparkle-700);
-    --content-presentation-action-hover-negative: var(--medium-red-600);
-    --background-presentation-action-hovercontstyle: var(--black-alpha-10);
-    --background-presentation-table-row-hover: var(--black-alpha-025);
-    --background-presentation-table-acton-hover: var(--blue-sparkle-alpha-10);
-    --border-presentation-table-action-hover: var(--blue-sparkle-500);
-    --content-presentation-global-highlight-lightback: var(--black-alpha-30);
-    --background-presentation-table-row-disabled: var(--black-alpha-5);
-    --background-presentation-form-base: var(--white-00);
-    --border-presentation-table-dropdown: var(--black-700);
-    --border-presentation-table-header: var(--white-500);
-    --background-presentation-tab-hover-topbar: var(--black-alpha-15);
-    --background-presentation-tab-selected-topbar: var(--black-1000);
-    --content-presentation-tab-action-hover: var(--black-1000);
-    --content-presentation-tab-action-selected: var(--white-00);
-    --border-presentation-tab-hover-topbar: var(--black-alpha-025);
-    --background-presentation-badge-green: var(--green-cyan-100);
-    --background-presentation-badge-green-light: var(--cool-green-100);
-    --background-presentation-badge-cocktail-green: var(--cocktail-green-200);
-    --background-presentation-badge-yellow: var(--yellow-200);
-    --background-presentation-badge-red-orange: var(--red-orange-100);
-    --background-presentation-badge-red: var(--medium-red-200);
-    --background-presentation-badge-rose: var(--macaroon-rose-100);
-    --background-presentation-badge-purple: var(--purple-100);
-    --background-presentation-badge-blue-purple: var(--blue-purple-200);
-    --background-presentation-badge-blue: var(--blue-sparkle-100);
-    --background-presentation-badge-navy: var(--wavy-navy-200);
-    --background-presentation-badge-gray: var(--white-200);
-    --content-presentation-badge-green: var(--green-cyan-800);
-    --content-presentation-badge-green-light: var(--cool-green-800);
-    --content-presentation-badge-cocktail-green: var(--cocktail-green-800);
-    --content-presentation-badge-yellow: var(--yellow-700);
-    --content-presentation-badge-red-orange: var(--red-orange-800);
-    --content-presentation-badge-red: var(--medium-red-800);
-    --content-presentation-badge-rose: var(--macaroon-rose-700);
-    --content-presentation-badge-purple: var(--purple-800);
-    --content-presentation-badge-blue-purple: var(--blue-purple-800);
-    --content-presentation-badge-blue: var(--blue-sparkle-800);
-    --content-presentation-badge-navy: var(--wavy-navy-800);
-    --content-presentation-badge-gray: var(--black-100);
-    --border-presentation-badge-green: var(--green-cyan-300);
-    --border-presentation-badge-green-light: var(--cool-green-300);
-    --border-presentation-badge-cocktail-green: var(--cocktail-green-400);
-    --border-presentation-badge-yellow: var(--yellow-400);
-    --border-presentation-badge-red-orange: var(--red-orange-300);
-    --border-presentation-badge-red: var(--medium-red-300);
-    --border-presentation-badge-rose: var(--macaroon-rose-300);
-    --border-presentation-badge-purple: var(--purple-300);
-    --border-presentation-badge-blue-purple: var(--blue-purple-300);
-    --border-presentation-badge-blue: var(--blue-sparkle-300);
-    --border-presentation-badge-navy: var(--wavy-navy-300);
-    --border-presentation-badge-gray: var(--white-500);
-    --background-presentation-action-disabled: var(--white-200);
-    --border-system-global-secondary: var(--black-400);
-    --background-presentation-form-field-primary: var(--white-25);
-    --background-system-body-tertiary: var(--black-700);
-    --background-system-action-hover-secondary: var(--purple-900);
-    --background-system-action-field-desabled: var(--black-500);
-    --background-system-action-field-primary: var(--black-1000);
-    --background-system-action-field-hover: var(--blue-sparkle-1000);
-    --border-system-action-field-hover-selected: var(--blue-sparkle-600);
-    --content-presentation-cur-color1: var(--cool-green-400);
-    --content-presentation-cur-color2: var(--blue-sparkle-500);
-    --content-presentation-cur-color4: var(--macaroon-rose-600);
-    --content-presentation-cur-color5: var(--yellow-500);
-    --content-presentation-cur-color6: var(--medium-red-500);
-    --content-presentation-cur-color7: var(--green-cyan-400);
-    --content-presentation-cur-color8: var(--red-orange-500);
-    --content-presentation-cur-color3: var(--wavy-navy-400);
-    --background-presentation-state-warning-secondary: var(--yellow-200);
-    --background-presentation-state-success-secondary: var(--green-cyan-100);
-    --background-presentation-state-negative-secondary: var(--medium-red-100);
-    --background-presentation-state-information-secondary: var(--blue-sparkle-100);
-    --content-presentation-action-hover-success: var(--cool-green-300);
-    --background-system-badge-purple: var(--purple-1000);
-    --background-system-badge-red: var(--medium-red-1000);
-    --content-system-badge-purple: var(--purple-600);
-    --content-system-badge-red: var(--medium-red-600);
-    --border-system-badge-purple: var(--purple-900);
-    --border-system-badge-red: var(--medium-red-900);
-    --content-system-global-label-purple: var(--purple-500);
-    --content-system-global-label-red: var(--medium-red-500);
-    --background-system-action-primary: var(--black-900);
-    --background-system-action-secondary: var(--black-800);
-    --background-system-action-tertiary: var(--black-700);
-    --background-presentation-action-link-primary: var(--black-alpha-5);
-    --background-presentation-action-link-hover: var(--black-alpha-10);
-    --content-presentation-action-link: var(--blue-sparkle-700);
-    --background-presentation-form-field-hover: var(--white-25);
-    --background-presentation-action-dropdown-primary: var(--white-00);
-    --background-presentation-form-header-shadow: var(--black-alpha-20);
-    --background-presentation-form-sidebar: var(--white-25);
-    --background-presentation-tab-default-sidebar: var(--white-00);
-    --background-presentation-tab-hover-sidebar: var(--white-50);
-    --background-presentation-tab-selected-sidebar: var(--black-1000);
-    --border-presentation-tab-default-sidebar: var(--white-300);
+  --background-presentation-table-row-selected: #4200FF0D;
+  --border-presentation-table-selected: #CFBEFFFF;
+  --background-presentation-form-base: #FFFFFFFF;
+  --background-presentation-tab-topbar: #00000014;
+  --background-presentation-stepper-hover: #00000014;
+  --border-presentation-action-disabled: var(--white-500);
+  --background-system-body-primary: var(--black-900);
+  --content-presentation-action-dark-primary: var(--white-200);
+  --content-presentation-action-hover: var(--white-25);
+  --content-presentation-state-success: var(--green-cyan-700);
+  --content-presentation-state-warning: var(--yellow-700);
+  --content-presentation-state-negative: var(--medium-red-600);
+  --background-presentation-action-secondary: var(--black-alpha-15);
+  --background-presentation-form-header: var(--white-alpha-20);
+  --background-presentation-state-success-primary: var(--green-cyan-700);
+  --background-presentation-state-warning-primary: var(--yellow-600);
+  --background-presentation-state-negative-primary: var(--medium-red-600);
+  --background-presentation-state-information-primary: var(--blue-sparkle-700);
+  --background-presentation-action-hover: var(--black-900);
+  --background-presentation-action-primary: var(--black-700);
+  --border-presentation-state-success: var(--green-cyan-700);
+  --border-presentation-state-warning: var(--yellow-700);
+  --border-presentation-state-negative: var(--medium-red-600);
+  --content-presentation-global-highlight-darkback: var(--white-alpha-30);
+  --background-system-body-secondary: var(--black-800);
+  --border-system-global-primary: var(--black-600);
+  --content-system-global-primary: var(--white-200);
+  --content-system-global-secondary: var(--white-700);
+  --background-system-body-base: var(--black-1000);
+  --content-presentation-global-primary: var(--black-1000);
+  --background-presentation-body-primary: var(--white-100);
+  --border-presentation-global-primary: var(--white-300);
+  --background-system-state-negative: var(--medium-red-600);
+  --border-system-action-hover-primary: var(--purple-600);
+  --background-system-action-hover-primary: var(--purple-1000);
+  --content-system-action-hover-primary: var(--white-25);
+  --background-system-action-selected-primary: var(--black-700);
+  --background-system-action-selected-secondray: var(--black-500);
+  --background-system-action-hover-tertiary: var(--white-alpha-20);
+  --content-system-action-hover-secondary: var(--purple-500);
+  --border-system-action-hover-secondary: var(--purple-600);
+  --border-system-global-sidebar-list-border: var(--white-500);
+  --border-presentation-state-focus: var(--blue-sparkle-600);
+  --content-presentation-action-light-primary: var(--black-1000);
+  --background-presentation-action-selected: var(--black-alpha-5);
+  --content-presentation-state-disabled: var(--black-alpha-30);
+  --background-presentation-action-borderstyle: var(--black-alpha-5);
+  --content-presentation-global-secondary: var(--black-200);
+  --content-presentation-action-light-secondary: var(--black-100);
+  --content-presentation-action-dark-secondary: var(--white-500);
+  --content-system-global-disabled: var(--black-100);
+  --content-presentation-state-information: var(--blue-sparkle-800);
+  --border-presentation-action-hover: var(--black-1000);
+  --border-presentation-action-primary: var(--black-100);
+  --content-presentation-action-hover-information: var(--blue-sparkle-700);
+  --content-presentation-action-hover-negative: var(--medium-red-600);
+  --background-presentation-action-hovercontstyle: var(--black-alpha-10);
+  --background-presentation-table-row-hover: var(--black-alpha-025);
+  --background-presentation-table-acton-hover: var(--blue-sparkle-alpha-10);
+  --border-presentation-table-action-hover: var(--blue-sparkle-500);
+  --content-presentation-global-highlight-lightback: var(--black-alpha-30);
+  --background-presentation-table-row-disabled: var(--black-alpha-5);
+  --border-presentation-table-dropdown: var(--black-700);
+  --border-presentation-table-header: var(--white-500);
+  --background-presentation-tab-hover-topbar: var(--black-alpha-15);
+  --background-presentation-tab-selected-topbar: var(--black-1000);
+  --content-presentation-tab-action-hover: var(--black-1000);
+  --content-presentation-tab-action-selected: var(--white-00);
+  --border-presentation-tab-hover-topbar: var(--black-alpha-025);
+  --background-presentation-badge-green: var(--green-cyan-100);
+  --background-presentation-badge-green-light: var(--cool-green-100);
+  --background-presentation-badge-cocktail-green: var(--cocktail-green-200);
+  --background-presentation-badge-yellow: var(--yellow-200);
+  --background-presentation-badge-red-orange: var(--red-orange-100);
+  --background-presentation-badge-red: var(--medium-red-200);
+  --background-presentation-badge-rose: var(--macaroon-rose-100);
+  --background-presentation-badge-purple: var(--purple-100);
+  --background-presentation-badge-blue-purple: var(--blue-purple-200);
+  --background-presentation-badge-blue: var(--blue-sparkle-100);
+  --background-presentation-badge-navy: var(--wavy-navy-200);
+  --background-presentation-badge-gray: var(--white-200);
+  --content-presentation-badge-green: var(--green-cyan-800);
+  --content-presentation-badge-green-light: var(--cool-green-800);
+  --content-presentation-badge-cocktail-green: var(--cocktail-green-800);
+  --content-presentation-badge-yellow: var(--yellow-700);
+  --content-presentation-badge-red-orange: var(--red-orange-800);
+  --content-presentation-badge-red: var(--medium-red-800);
+  --content-presentation-badge-rose: var(--macaroon-rose-700);
+  --content-presentation-badge-purple: var(--purple-800);
+  --content-presentation-badge-blue-purple: var(--blue-purple-800);
+  --content-presentation-badge-blue: var(--blue-sparkle-800);
+  --content-presentation-badge-navy: var(--wavy-navy-800);
+  --content-presentation-badge-gray: var(--black-100);
+  --border-presentation-badge-green: var(--green-cyan-300);
+  --border-presentation-badge-green-light: var(--cool-green-300);
+  --border-presentation-badge-cocktail-green: var(--cocktail-green-400);
+  --border-presentation-badge-yellow: var(--yellow-400);
+  --border-presentation-badge-red-orange: var(--red-orange-300);
+  --border-presentation-badge-red: var(--medium-red-300);
+  --border-presentation-badge-rose: var(--macaroon-rose-300);
+  --border-presentation-badge-purple: var(--purple-300);
+  --border-presentation-badge-blue-purple: var(--blue-purple-300);
+  --border-presentation-badge-blue: var(--blue-sparkle-300);
+  --border-presentation-badge-navy: var(--wavy-navy-300);
+  --border-presentation-badge-gray: var(--white-500);
+  --background-presentation-action-disabled: var(--white-200);
+  --border-system-global-secondary: var(--black-400);
+  --background-presentation-form-field-primary: var(--white-25);
+  --background-system-body-tertiary: var(--black-700);
+  --background-system-action-hover-secondary: var(--purple-900);
+  --background-system-action-field-desabled: var(--black-500);
+  --background-system-action-field-primary: var(--black-1000);
+  --background-system-action-field-hover: var(--blue-sparkle-1000);
+  --border-system-action-field-hover-selected: var(--blue-sparkle-600);
+  --content-presentation-cur-color1: var(--cool-green-400);
+  --content-presentation-cur-color2: var(--blue-sparkle-500);
+  --content-presentation-cur-color4: var(--macaroon-rose-600);
+  --content-presentation-cur-color5: var(--yellow-500);
+  --content-presentation-cur-color6: var(--medium-red-500);
+  --content-presentation-cur-color7: var(--green-cyan-400);
+  --content-presentation-cur-color8: var(--red-orange-500);
+  --content-presentation-cur-color3: var(--wavy-navy-400);
+  --background-presentation-state-warning-secondary: var(--yellow-200);
+  --background-presentation-state-success-secondary: var(--green-cyan-100);
+  --background-presentation-state-negative-secondary: var(--medium-red-100);
+  --background-presentation-state-information-secondary: var(--blue-sparkle-100);
+  --content-presentation-action-hover-success: var(--cool-green-300);
+  --background-system-badge-purple: var(--purple-1000);
+  --background-system-badge-red: var(--medium-red-1000);
+  --content-system-badge-purple: var(--purple-600);
+  --content-system-badge-red: var(--medium-red-600);
+  --border-system-badge-purple: var(--purple-900);
+  --border-system-badge-red: var(--medium-red-900);
+  --content-system-global-label-purple: var(--purple-500);
+  --content-system-global-label-red: var(--medium-red-500);
+  --background-system-action-primary: var(--black-900);
+  --background-system-action-secondary: var(--black-800);
+  --background-system-action-tertiary: var(--black-700);
+  --background-presentation-action-link-primary: var(--black-alpha-5);
+  --background-presentation-action-link-hover: var(--black-alpha-10);
+  --content-presentation-action-link: var(--blue-sparkle-700);
+  --background-presentation-form-field-hover: var(--white-25);
+  --background-presentation-action-dropdown-primary: var(--white-00);
+  --background-presentation-form-header-shadow: var(--black-alpha-10);
+  --background-presentation-form-tabs: var(--white-25);
+  --background-presentation-tab-sidebar: var(--white-00);
+  --background-presentation-tab-hover-sidebar: var(--white-50);
+  --background-presentation-tab-selected-sidebar: var(--black-1000);
+  --border-presentation-tab-sidebar: var(--white-300);
+  --content-presentation-stepper-selected: var(--white-00);
+  --border-presentation-stepper: var(--white-700);
+  --border-presentation-stepper-hover: var(--violet-500);
+  --border-presentation-stepper-selected: var(--violet-700);
+  --border-presentation-stepper-negative: var(--medium-red-700);
+  --border-presentation-stepper-divider: var(--violet-700);
+  --background-presentation-stepper-selected: var(--violet-700);
+  --border-presentation-action-borderstyle: var(--black-alpha-15);
+  --border-presentation-action-checkbox-primary: var(--white-700);
 }
