--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: gray;
+    background-color: rgb(192, 192, 192);
 }
 
 .app {
