--- a/src/lib/components/base/steppers/stepperTab/components/stepperLine/components/Line/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLine/components/Line/style.scss
@@ -1,5 +1,30 @@
-.stepper-tab-line{
-    background: var(--border-presentation-stepper-default);
-    height: 3px;
-    width: 100%;
+.stepper-tab-line-wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 6px;
+    transition: all 250ms ease-in-out;
+
+    .stepper-tab-line {
+        background: var(--border-presentation-stepper);
+        height: 3px;
+        width: 100%;
+    }
+
+    .stepper-tab-start-line {
+        width: 2px;
+        height: 8px;
+        border-radius: 1px;
+        background: var(--border-presentation-stepper-divider);
+    }
+}
+
+.stepper-tab-line-selected {
+    background: var(--border-presentation-stepper-selected) !important;
+}
+
+.stepper-tab-line-negative {
+    background: var(--border-presentation-stepper-negative) !important;
 }
