--- a/src/lib/components/base/steppers/stepperTab/components/stepperLine/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLine/style.scss
@@ -1,6 +1,17 @@
-.stepper-tab-main-line{
+.stepper-tab-main-line {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0;
+    width: 100%;
+    height: 30px;
+
+    &:hover {
+        .stepper-tab-line {
+            background: var(--border-presentation-stepper-hover);
+        }
+
+        .glare-stepper-counter-circle {
+            border-color: var(--border-presentation-stepper-hover);
+        }
+    }
 }
