--- a/src/lib/components/base/steppers/stepperTab/components/stepperLine/components/circle/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLine/components/circle/style.scss
@@ -24,5 +24,5 @@
 .glare-stepper-counter-circle-negative {
     background: transparent !important;
     border-color: var(--border-presentation-stepper-negative) !important;
-    color: var(--content-presentation-global-primary);
+    color: var(--content-presentation-global-primary) !important;
 }
