modify StepperTab states colors and fix missed css color mapping var

--- a/src/lib/components/base/steppers/stepperTab/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/style.scss
@@ -8,11 +8,12 @@
 
     &:hover {
         .stepper-tab-line {
-            background: var(--border-presentation-stepper-hover);
+            background: var(--border-presentation-stepper-hover) !important;
         }
 
         .glare-stepper-counter-circle {
             border-color: var(--border-presentation-stepper-hover);
+            color: var(--content-presentation-global-primary);
         }
     }
 }
