--- a/src/lib/components/base/steppers/stepperTab/components/stepperLabel/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLabel/style.scss
@@ -26,6 +26,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+        text-align: center;
     }
 
     .stepper-tab-label-icon {
