--- a/src/lib/components/base/steppers/stepperTab/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/style.scss
@@ -5,10 +5,12 @@
     align-items: center;
     width: 100%;
     gap: 4px;
+    position: relative;
+
 
     &:hover {
         .stepper-tab-line {
-            background: var(--border-presentation-stepper-hover) !important;
+            background: var(--border-presentation-stepper-hover);
         }
 
         .glare-stepper-counter-circle {
@@ -16,4 +18,6 @@
             color: var(--content-presentation-global-primary);
         }
     }
+
+
 }
