add StepperPhoneArrow component
add StepperPhoneArrow component and delete the arrow buttons from the StepperTab component

--- a/src/lib/components/base/steppers/stepperTab/components/stepperLabel/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLabel/style.scss
@@ -4,9 +4,8 @@
 
 .stepper-tab-label {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    width: fit-content;
     height: 26px;
     border-radius: var(--Radius-2-max, 4px);
     background-color: transparent;
