--- a/src/lib/components/base/steppers/stepperTab/components/stepperLine/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLine/style.scss
@@ -16,7 +16,10 @@
                 var(--background-presentation-form-tabs) 100%);
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 3px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         @include respond-to(phone) {
             display: none;
