--- a/src/lib/components/base/steppers/stepperTab/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/style.scss
@@ -7,7 +7,6 @@
     gap: 4px;
     position: relative;
 
-
     &:hover {
         .stepper-tab-line {
             background: var(--border-presentation-stepper-hover);
@@ -18,6 +17,8 @@
             color: var(--content-presentation-global-primary);
         }
     }
+}
 
-
+.glare-stepper-tab * {
+    user-select: none;
 }
