--- a/src/lib/components/base/labels/label/style.scss
+++ b/src/lib/components/base/labels/label/style.scss
@@ -32,6 +32,7 @@
             color: var(--content-presentation-state-negative);
             @include Labels-typography-Small-Medium;
             text-align: start;
+            -webkit-text-size-adjust: 100%; // Prevent text zooming on iOS
         }
     }
 }
